2024-5: Complete problem
Implemented a custom comparator function.

The comparator function allows the built-in sort function to be used. This avoids the need to implement a custom sort function.